- The service information was incorrectly stored for the open library online book search. This fix only works for newly added items (after this fix).
- Password could not be reset from the client (client - server mode)
- Linux: resizing dialog/forms from the right hand side scrambles the dialog
- Sorting on multi-reference fields was incorrect.

[Updated]
- Improved the preview for the find and replace.
- Improved the find and replace regular expression support.
- Added failed login message if credentials are incorrect.
- Added clear option to the update all form.
- On startup the report versions (based on modification date) are checked against the systems reports. If the system reports are newer, the reports in the user folder are updated.
- Also added the picture preview pane to the icon browser.

[TODO]
- Web module needs to be updated
- Update the translations 
  lblIncludeImage = Include Pictures
  lblIncludeAttachments = Include Attachments
  lblCopyAttachments = Copy Attachments
  lblAfter = After
- Outstanding tickets 
- retest upgrade for images and image conversion

--------------------------------------------------------------------
Data Crow version 5.0  BETA I                 Released on 2024-09-19
--------------------------------------------------------------------
Data Crow 5.0 is the accumulation of all releases made since picking up Data Crow development.
Version 4.0 has been alive for a long time.. since July the 23th of 2014 to be exact.
Lots of things have changed since then, many of the changes could easily have triggered the release of a new major version.
These past changes combined with the changes as listed below make it justifiable to release a new major version.

[New]
- Picture management has been completed changed; Data Crow now allows for unlimited number of pictures to be added.

[Updated]
- Scrolling performance has been significantly improved for the card list.